2008-09-03  David Gilbert  <david.gilbert@object-refinery.com>

    * experimental/org/jfree/experimental/chart/annotations/XYTitleAnnotation.java:
    Moved to main,
    * experimental/org/jfree/experimental/chart/annotations/junit/XYTitleAnnotationTests.java
    Likewise,
    * experimental/org/jfree/experimental/chart/util/XYCoordinateType.java
    Likewise,
    * source/org/jfree/chart/annotation/XYTitleAnnotation.java:
    Transferred from experimental,
    * source/org/jfree/chart/util/XYCoordinateType.java: Likewise,
    * tests/org/jfree/chart/annotations/junit/AnnotationsPackageTests.java
    (suite): Added tests for XYTitleAnnotation,
    * tests/org/jfree/chart/annotations/junit/XYTitleAnnotationTests.java:
    New file.

2008-09-01  David Gilbert  <david.gilbert@object-refinery.com>

	Bug 2078057:
    * source/org/jfree/chart/axis/DateAxis.java
    (previousStandardDate): For month option, peg in case of 
    non-default time zone,
    * source/org/jfree/data/time/Month.java
    (previous): Added API doc comments,
    (next): Likewise.

2008-09-01  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/axis/DateAxis.java
    (valueToJava2D): Use DateRange methods that return millis,
    (java2DToValue): Likewise,
    * source/org/jfree/data/time/DateRange.java
    (getLowerMillis): New method,
    (getUpperMillis): Likewise.

2008-09-01  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/util/RelativeDateFormat.java
    (hourFormatter): New field,
    (minuteFormatter): New field,
    (RelativeDateFormat(long)): Initialise new fields,
    (setDayFormatter): New method,
    (setHourFormatter): Likewise,
    (setMinuteFormatter): Likewise,
    (format): Use new fields for formatting,
    (equals): Updated for new fields.

2008-09-01  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/XYDotRenderer.java
    (drawItem): Check for item visibility.
