@@ -1,3 +1,9 @@
+2008-09-10  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/chart/StandardChartTheme.java
+    (applyToCategoryAxis): Check for SubCategoryAxis and set sublabel font and
+    paint.
+
 2008-09-03  David Gilbert  <david.gilbert@object-refinery.com>
 
     * experimental/org/jfree/experimental/chart/annotations/XYTitleAnnotation.java:
